# ruslandsp11-future-Future_bot

./: .env.example  .gitkeep  README.md  pyproject.toml  Список слов и хэштегов.txt
docs/: АРХИТЕКТУРА.md
experiments/: check_vk_tls.py
future_bot/: __main__.py  config.py  logic.py  scheduler.py  service.py  storage.py  vk_client.py
tests/: test_config.py  test_logic.py  test_scheduler.py  test_service.py  test_storage.py  test_vk_client.py
